--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -1,193 +1,257 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ProductsActivity">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/shopRecyclerView"
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
-        tools:listitem="@layout/shop_row"
-        /> <!-- number of rows -->
+        android:layout_height="30dp" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_gravity="center"
         android:gravity="center"
         android:text="@string/description_products"
-        android:textSize="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="24dp" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/imageButton"-->
-<!--        android:layout_width="150dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:scaleType="fitXY"-->
-<!--        android:layout_marginTop="24dp"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/imageButton2"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
-<!--        app:srcCompat="@drawable/compton" />-->
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="120dp"
+                android:layout_height="90dp"
+                android:padding="4dp"
+                android:src="@drawable/compton" />
 
-<!--    <ImageButton-->
-<!--        android:id="@+id/imageButton2"-->
-<!--        android:layout_width="150dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:layout_marginTop="24dp"-->
-<!--        android:scaleType="fitXY"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/imageButton"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
-<!--        app:srcCompat="@drawable/comverges" />-->
+            <TextView
+                android:id="@+id/productName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/imageView"
+                android:text="@string/item_compton"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="#000000" />
 
-<!--    &lt;!&ndash; Calls the openCompton method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button3"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:onClick="openItemCompton"-->
-<!--        android:text="@string/item_compton"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/button4"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageButton" />-->
+            <TextView
+                android:id="@+id/productPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/productName"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@id/imageView"
+                android:text="@string/price_compton"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
-<!--    &lt;!&ndash; Calls the openComverges method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button4"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:onClick="openItemComverges"-->
-<!--        android:text="@string/item_comverges"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/button3"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />-->
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_view_item"
+                android:layout_below="@id/productPrice"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:onClick="openItemCompton"
+                android:layout_toRightOf="@id/imageView"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
-<!--    &lt;!&ndash; Calls the openFlexigen method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button5"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:onClick="openItemFlexigen"-->
-<!--        android:text="@string/item_flexigen"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/button6"-->
-<!--        app:layout_constraintHorizontal_bias="0.193"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button3" />-->
+        </RelativeLayout>
 
-<!--    &lt;!&ndash; Calls the openFuelworks method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button6"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="@string/item_fuelworks"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/button5"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button4" />-->
+    </androidx.cardview.widget.CardView>
 
-<!--    &lt;!&ndash; Calls the openFuturis method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button7"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="@string/item_futuris"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.193"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button5" />-->
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
-<!--    &lt;!&ndash; Calls the openIsoternia method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button8"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="@string/item_isoternia"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.797"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/button7"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button6" />-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
 
-<!--    &lt;!&ndash; Calls the openKiosk method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button9"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="@string/item_kiosk"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/button12"-->
-<!--        app:layout_constraintHorizontal_bias="0.275"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button7" />-->
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="120dp"
+                android:layout_height="90dp"
+                android:padding="4dp"
+                android:src="@drawable/comverges" />
 
-<!--    &lt;!&ndash; Calls the openLunchpod method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button10"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="24dp"-->
-<!--        android:text="@string/item_lunchpod"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button9" />-->
+            <TextView
+                android:id="@+id/productName2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/imageView2"
+                android:text="@string/item_comverges"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="#000000" />
 
-<!--    &lt;!&ndash; Calls the openMasons method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button11"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        android:text="@string/item_masons"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.023"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/button10"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button12"-->
-<!--        app:layout_constraintVertical_bias="0.097" />-->
+            <TextView
+                android:id="@+id/productPrice2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/productName2"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@id/imageView2"
+                android:text="@string/price_comverges"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
-<!--    &lt;!&ndash; Calls the openPigzart method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button12"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:text="@string/item_pigzart"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/button9"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/button8" />-->
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_view_item"
+                android:layout_below="@id/productPrice2"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:onClick="openItemComverges"
+                android:layout_toRightOf="@id/imageView2"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
-<!--    &lt;!&ndash; Calls the openPoyo method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button13"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/item_poyo"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/button11" />-->
+        </RelativeLayout>
 
-<!--    &lt;!&ndash; Calls the openZappix method in ProductsActivity.java &ndash;&gt;-->
-<!--    <Button-->
-<!--        android:id="@+id/button14"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="@string/item_zappix"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent" />-->
+    </androidx.cardview.widget.CardView>
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/button_view_promotion"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="120dp"
+                android:layout_height="90dp"
+                android:padding="4dp"
+                android:src="@drawable/flexigen" />
+
+            <TextView
+                android:id="@+id/productName3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/imageView3"
+                android:text="@string/item_flexigen"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/productPrice3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/productName3"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@id/imageView3"
+                android:text="@string/price_flexigen"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_view_item"
+                android:layout_below="@id/productPrice3"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:onClick="openItemFlexigen"
+                android:layout_toRightOf="@id/imageView3"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="120dp"
+                android:layout_height="90dp"
+                android:padding="4dp"
+                android:src="@drawable/fuelworks" />
+
+            <TextView
+                android:id="@+id/productName4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/imageView4"
+                android:text="@string/item_fuelworks"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="#000000" />
+
+            <TextView
+                android:id="@+id/productPrice4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/productName4"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toRightOf="@id/imageView4"
+                android:text="@string/price_fuelworks"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/button_view_item"
+                android:layout_below="@id/productPrice4"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:onClick="openItemFuelworks"
+                android:layout_toRightOf="@id/imageView4"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>
