--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:id="@+id/button2"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:onClick="openInAppPurchase"
         android:text="@string/button_in_app_purchases"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
