--- a/app/src/main/res/layout/activity_item_fuelworks.xml
+++ b/app/src/main/res/layout/activity_item_fuelworks.xml
@@ -73,6 +73,7 @@
             android:layout_height="wrap_content"
             android:enabled="true"
             android:text="@string/button_add_to_wishlist"
+            android:onClick="addToWishlist"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
     </LinearLayout>
