--- a/app/src/main/res/layout/activity_item_flexigen.xml
+++ b/app/src/main/res/layout/activity_item_flexigen.xml
@@ -65,7 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="true"
-            android:text="@string/button_add_to_cart" />
+            android:text="@string/button_add_to_cart"
+            android:onClick="addToCart" />
 
         <Button
             android:id="@+id/addToWishlist"
