--- a/app/src/main/res/layout/activity_item_fuelworks.xml
+++ b/app/src/main/res/layout/activity_item_fuelworks.xml
@@ -65,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:enabled="true"
+            android:onClick="addToCart"
             android:text="@string/button_add_to_cart" />
 
         <Button
